Fix spacing between data form and header

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h1{
 
 #dataForm{
     font-family: 'Nunito', sans-serif;
-    
+    padding-top: 1vh;
     align-self: center;
     
 }
